[package]
name = "point-nd"
version = "0.4.1"
edition = "2021"
description = "A simple and flexible no-std struct for modelling points on an axis"
license = "MIT"
authors = [
    "Taennan taennan@zohomail.com"
]
repository = "https://github.com/taennan/point-nd/tree/main"
exclude = [".idea", ".gitignore", "CHANGELOG.md"]

keywords = ["point", "geometry", "multidimensional", "coordinate"]
categories = ["data-structures", "graphics", "no-std"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }

[features]
default = ["appliers", "var_dims", "conv_methods", "dim_macros"]
full = ["default", "std", "serde"]

x = []
y = []
z = []
w = []
conv_methods = ["x", "y", "z", "w"]

appliers = []
dim_macros = []
var_dims = []

std = []
serde = []
