[package]
name = "point-nd"
version = "0.4.1"
edition = "2021"
description = "A simple and flexible no-std struct for modelling points on an axis"
license = "MIT"
authors = [
    "Taennan taennan@zohomail.com"
]
repository = "https://github.com/taennan/point-nd/tree/main"
exclude = [".idea", ".gitignore", "CHANGELOG.md"]

keywords = ["point", "geometry", "multidimensional", "coordinate"]
categories = ["data-structures", "graphics", "no-std"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }

[features]
default = ["appliers", "conv_methods", "dim_macros"]
full = ["default", "var_dims"]

# Get, Set and Shift x, y, z and w values of PointND's from 1..=4 dimensions
x = []
y = []
z = []
w = []
conv_methods = ["x", "y", "z", "w"]

# Allows use of apply, apply_dims, apply_vals and apply_point methods
appliers = []
# Allows use of dim, dims and dimr macros
dim_macros = []
# Alows use of extend and contract methods
var_dims = []
