[package]
name = "point-nd"
version = "0.4.1"
edition = "2021"
description = "A simple and flexible no-std struct to model points on n-dimensional axes"
license = "MIT OR Apache-2.0"
authors = [
    "taennan taennan@zohomail.com"
]
repository = "https://github.com/taennan/point-nd/tree/main"
exclude = [".idea", ".gitignore", "CHANGELOG.md"]

keywords = ["point", "geometry", "multidimensional", "coordinate"]
categories = ["data-structures", "graphics", "no-std"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, optional = true }

[features]
default = ["conv_methods", "appliers"]
full = ["default", "var_dims"]

# Enables methods that Get, Set and Shift x, y, z and w values of PointND's from 1..=4 dimensions
x = []
y = []
z = []
w = []
conv_methods = ["x", "y", "z", "w"]

# Enables apply, apply_dims, apply_vals and apply_point methods
appliers = ["arrayvec"]
# Enables extend and contract methods
var_dims = ["arrayvec"]
